# rusapi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general.yml
migrations/: 20230320172840_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
