[package]
name = "rusapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
chrono = "0.4.24"
uuid = { version = "1.3.0", features = ["v4"] }

# Using table-like toml syntaxca
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dev-dependencies]
reqwest = "0.11.14"
