[package]
name = "rusapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
chrono = "0.4.31"
uuid = { version = "1.4.1", features = ["v4"] }
env_logger = { version = "0.10.0", features = [] }
log = "0.4.20"

# Using table-like toml syntaxca
[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dev-dependencies]
reqwest = "0.11.20"
